--- a/403.html
+++ b/403.html
@@ -62,9 +62,11 @@
       <div>
         <div class="modal-body">
           <h2>Pääsy estetty</h2>
+          <i>Virhekoodi 403</i>
 
-          Pyytämääsi tietoon pääsy on estetty.
-        </div>
+          <p>Pyydetylle sivulle pääsy on estetty. Tarkista pyytämäsi
+          sivun osoite virheen varalta.</p>
+          </div>
         <div class="modal-footer">
           <img
             src="data:image/svg+xml;base64, PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIy
