--- a/502.html
+++ b/502.html
@@ -62,11 +62,11 @@
       <div>
         <div class="modal-body">
           <h2>Palvelussa on häiriö</h2>
+          <i>Virhekoodi 502</i>
 
-          DIAS-palveluissa on odottamaton häiriö. Odota hetki ja yritä
-          sitten uudestaan. Mikäli häiriö jatkuu, voit ottaa yhteyttä
-          <a href="https://asiakaspalvelu.dias.fi">asiakaspalveluun</a>.
-
+          <p>DIAS-palveluissa on odottamaton häiriö. Odota hetki ja
+            yritä sitten uudestaan. Mikäli häiriö jatkuu, ota yhteyttä
+            <a href="https://asiakaspalvelu.dias.fi">asiakaspalveluun</a>.</p>
         </div>
         <div class="modal-footer">
           <img
