Add update instructions and final touches

--- a/502-2022-04-11.html
+++ b/502-2022-04-11.html
@@ -64,7 +64,7 @@
           <h2>Palvelussa on häiriö</h2>
           <i>Virhekoodi 502</i>
 
-          <p>DIAS-palveluissa on odottamaton häiriö tai
+          <p>DIAS-palveluissa on odottamaton häiriö tai suunniteltu
             käyttökatko. Odota hetki ja yritä sitten uudestaan. Mikäli
             häiriö jatkuu, ota yhteyttä
             <a href="https://asiakaspalvelu.dias.fi">asiakaspalveluun</a>.</p>
