Refine 502 error page (#1)
Refine 502 error page, add update instructions and final touches, update README.md

--- a/502-2022-04-11.html
+++ b/502-2022-04-11.html
@@ -64,8 +64,9 @@
           <h2>Palvelussa on häiriö</h2>
           <i>Virhekoodi 502</i>
 
-          <p>DIAS-palveluissa on odottamaton häiriö. Odota hetki ja
-            yritä sitten uudestaan. Mikäli häiriö jatkuu, ota yhteyttä
+          <p>DIAS-palveluissa on odottamaton häiriö tai suunniteltu
+            käyttökatko. Odota hetki ja yritä sitten uudestaan. Mikäli
+            häiriö jatkuu, ota yhteyttä
             <a href="https://asiakaspalvelu.dias.fi">asiakaspalveluun</a>.</p>
         </div>
         <div class="modal-footer">
