Update error page title
https://diasfi.slack.com/archives/C03U5CLHGTT/p1671082459521859

--- a/502-2022-04-11.html
+++ b/502-2022-04-11.html
@@ -61,7 +61,7 @@
     <div class="dias-container">
       <div>
         <div class="modal-body">
-          <h2>Palvelussa on häiriö</h2>
+          <h2>Palvelu ei ole juuri nyt käytettävissä</h2>
           <i>Virhekoodi 502</i>
 
           <p>DIAS-palveluissa on odottamaton häiriö tai suunniteltu
